--- a/BINGO/style.css
+++ b/BINGO/style.css
@@ -1,6 +1,11 @@
-
 html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   background-color: #ccc;
+}
+
+body {
   display: flex;
   justify-content: center;
   align-items: center;
